fix: removed use of secret envs in cloudbuild.yaml

--- a/backends/hello/v1alpha1/cloudbuild.yaml
+++ b/backends/hello/v1alpha1/cloudbuild.yaml
@@ -9,7 +9,8 @@ steps:
 #        TODO: add this if your go packages are hosted privately
 #        --build-arg=GIT_PASSWORD=$$GIT_PASSWORD --build-arg=GIT_USERNAME=$$GIT_USERNAME \
     entrypoint: bash
-    secretEnv: ['GIT_PASSWORD', 'GIT_USERNAME']
+#    TODO: add this if your go packages are hosted privately
+#    secretEnv: ['GIT_PASSWORD', 'GIT_USERNAME']
   # Push the container image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'europe-west1-docker.pkg.dev/${PROJECT_ID}/services-artifacts/hello-v1alpha1' ]
